Do not do anything if a user tries to switch their Facebook account, tell them we don't support it yet.
Reload /account without any parameters when the user logs out from Facebook
to avoid re-processing a Facebook authentication token and logging the user in.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -590,3 +590,8 @@ div.dh-person-header {
 .dh-thumbnail-block-more {
 	float:				left;
 }
+
+#dhTermsOfUseNote, #dhFacebookNote {
+	padding:            5px;
+	margin-bottom:      5px;
+}
