--- a/dumbhippo/trunk/server/web/css2/site.css
+++ b/dumbhippo/trunk/server/web/css2/site.css
@@ -2,7 +2,7 @@
 @IMPORT url("site-positions.css");
 
 body {
-	font-family: 		Arial, sans;
+	font-family: 		Arial, sans-serif;
 }
 
 body.dh-gray-background-page {
