Add lock icon tooltip in BlockView classes.
Add isPublic field to XML for client.

Refactor simpleBlockTitle into separate tags for a bit more clarity and
the possibility of having blocks which use reuse its components.

Remove unecessary constructor in DynamicPollingSystem.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -306,7 +306,8 @@ div.dh-notification {
 .dh-stacker-block-title-lock {
     position:           relative;
     top:                1px;  
-    padding-right:		5px;		  
+    padding-right:		5px;
+    padding-left:		5px;		  
  }
  
 .dh-stacker-block-bottom-padding {
