--- a/dumbhippo/trunk/client/windows/WiXInstaller/Components.wxs
+++ b/dumbhippo/trunk/client/windows/WiXInstaller/Components.wxs
@@ -158,8 +158,11 @@
 	                    <File Id="lidPng"            Name="lid.png"      LongName="lid.png"            src="images\lid.png"            DiskId="1" Vital="yes"/>
 	                    <File Id="lockIconPng"       Name="lock_ico.png" LongName="lock_icon.png"      src="images\lock_icon.png"      DiskId="1" Vital="yes"/>
 	                    <File Id="mugshotstackerPng" Name="mugshots.png" LongName="mugshotstacker.png" src="images\mugshotstacker.png" DiskId="1" Vital="yes"/>
+	                    <File Id="noartPng"          Name="noart.png"    LongName="noart.png"          src="images\noart.png"          DiskId="1" Vital="yes"/>
 	                    <File Id="nophotoPng"        Name="nophoto.png"  LongName="nophoto.png"        src="images\nophoto.png"        DiskId="1" Vital="yes"/>
 	                    <File Id="photoIconPng"      Name="photo_ic.png" LongName="photo_icon.png"     src="images\photo_icon.png"     DiskId="1" Vital="yes"/>
+	                    <File Id="quiphateIconPng"   Name="quiphate.png" LongName="quiphate_icon.png"  src="images\quiphate_icon.png"  DiskId="1" Vital="yes"/>
+	                    <File Id="quiploveIconPng"   Name="quiplove.png" LongName="quiplove_icon.png"  src="images\quiplove_icon.png"  DiskId="1" Vital="yes"/>
 	                    <File Id="searchXPng"        Name="search_x.png" LongName="search_x.png"       src="images\search_x.png"       DiskId="1" Vital="yes"/>
 	                    <File Id="unhushPng"         Name="unhush.png"   LongName="unhush.png"         src="images\unhush.png"         DiskId="1" Vital="yes"/>
 	                    <File Id="unhush2Png"        Name="unhush2.png"  LongName="unhush2.png"        src="images\unhush2.png"        DiskId="1" Vital="yes"/>
