Add invited groups to /groups.
Add /group-invitations.

Fix stacker for now to only show groups with participated blocks, don't try to
include any groups that don't have them.  Hack visibility into query to avoid
issues with repeated querying.  These together fix an infinite loop on /groups.

Make GroupMugshotView lazy.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -407,6 +407,17 @@ div.dh-notification {
 	margin-left:		5px;
 }
 
+.dh-half-shinybox-left-container {
+    width:              49%;
+    float:              left;
+}
+
+.dh-half-shinybox-right-container {
+    width:              49%;
+    float:              right;
+    text-align:         left;
+}
+
 .dh-thumbnail-box-border, .dh-rss-box-border {
 	position:			relative;
 	width:				478px;
