Sort active contacts in descending order.
Add support for displaying followed groups.

Use "My" on viewer's own groups page.

Fix stackOrder so that expanding blocks on /groups works.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -57,7 +57,7 @@ input.dh-text-input {
 	margin-top:	    8px;
 }
 
-.dh-page-options {
+.dh-page-options-container {
 	position:		absolute;
 	right:			0;
 	top:			0;
