--- a/dumbhippo/trunk/server/web/css3/buttons.css
+++ b/dumbhippo/trunk/server/web/css3/buttons.css
@@ -2,13 +2,22 @@
 @IMPORT url("buttons-positions.css");
 
 .dh-buttons-header-box {
-	background-color: 	#9748bd;
+	background-color: 	#9648BC;
 	-moz-border-radius: 10px;
 }
 
-.dh-buttons-header-text {
+.dh-buttons-header-text-large {
+	font-size:			18px;
+	color:				#FFFFFF;	
+	font-weight:		bold;	
+	text-align:			center;	
+}
+
+.dh-buttons-header-text-small {
+	font-size:			14px;
 	color:				#FFFFFF;	
 	font-weight:		bold;
+	text-align:			center;
 }
 
 .dh-buttons-choice-background {
