--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -490,3 +490,8 @@ div.dh-async-action-link-complete {
 	font-size:          12px;
 	font-weight:		bold;
 }
+
+.dh-person-item {
+    font-size:         12px;
+}
+
