musicBlock.tag site.css block.tag: Replace musicBlockPerson with a new tag shared for MUSIC_PERSON and MUSIC_CHAT;   match new client appearance. MusicBlockView MusicChatBlockView MusicPersonBlockView: Export a common interface from the   two music block types chatMessage.tag chatPreview.tag: Factor out an individual message tag from the chat prevew.   Handle LOVE/HATE sentiments, add an option to not show the join chat link. stacker.js: Updating expanding to handle new chat blocks noart.png: No album image for the new image blocks. block.tag groupChatBlock.tag: Fix group chat blocks to not be expandable on the anonymous   main page.

--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -312,6 +312,7 @@ div.dh-async-action-link-complete {
 }
 
 .dh-stacker-block {
+	table-layout:		fixed;
 }
 
 .dh-stacker-block-expandable {
@@ -495,3 +496,39 @@ div.dh-async-action-link-complete {
     font-size:         12px;
 }
 
+.dh-music-block-left {
+	padding-top:		6px;
+	padding-left:		6px;
+	padding-bottom:		6px;
+}
+
+.dh-music-block-left table {
+	table-layout:		fixed;
+}
+
+.dh-music-block-icon img {
+	display:			block;
+}
+
+.dh-music-block-beside {
+	padding-left:		8px;
+}
+
+.dh-music-block-artist {
+	font-weight:		bold;
+	font-size:			14px;
+	margin-left:		15px;
+	text-indent:		-15px;
+}
+
+.dh-music-block-name {
+	font-weight:		bold;
+	font-size:			14px;
+	margin-left:		15px;
+	text-indent:		-15px;
+}
+
+.dh-music-block-history-item {
+	margin-left:		15px;
+	text-indent:		-15px;
+}
