Display ribbon bars for people on /network-overview with 10 icons per row. Make "in network" and "groups" counts linkified. Allow the popup to become wider if the person's name is longer than the default width. Change how popups for the rightmost icons are positioned.

--- a/dumbhippo/trunk/server/web/css3/site-iefixes.css
+++ b/dumbhippo/trunk/server/web/css3/site-iefixes.css
@@ -16,3 +16,11 @@
 .dh-learnmore-explanation {
     height:        1%;
 }
+
+.dh-person-item-more-info {
+    width:         270px;
+}
+
+.dh-person-item-more-info .dh-person-item-name {
+    margin-top:    1px;
+}
