--- a/dumbhippo/trunk/client/windows/WiXInstaller/Components.wxs
+++ b/dumbhippo/trunk/client/windows/WiXInstaller/Components.wxs
@@ -67,6 +67,10 @@
                         <Registry Root="HKMU" Key="SOFTWARE\Microsoft\Windows\CurrentVersion\Explorer\Browser Helper Objects\{509D3C6C-7BD2-49F7-B0F9-6C32AC4A8836}" Value="Mugshot Tracker" Type="string" />
 		    </Component>
 		    
+		    <Component Id="hippoFirefox" Guid="51C5D530-D8A5-4C08-8D6B-B24358FC9DE2">
+		        <File Id="hippoFirefoxDll" Name="HippoFir.dll" LongName="HippoFirefox.dll" src="HippoFirefox.dll"  DiskId="1" Vital="yes"/>
+		    </Component>
+		    
 		    <Component Id="hippoShellExt" Guid="4A7068C1-20B6-423A-B51A-5195E69FEED2">
 		        <File Id="hippoShellExtDll" Name="HippoShe.dll" LongName="HippoShellExt.dll" src="HippoShellExt.dll"  DiskId="1" Vital="yes"/>
 		        <Class Id="BD176713-C30F-4C24-97D8-134DEADC97E8" Server="hippoShellExtDll" Description="Mugshot Shell Extension" Context="InprocServer32" ThreadingModel="apartment"/>
@@ -121,6 +125,55 @@
     		            <Component Id="pangoConfiguration" Guid="7D242C09-A7C0-41cd-B5B6-6C70229F574D">
 	                        <File Id="pangoAliases"  Name="pango.ali"    LongName="pango.aliases"      src="etc\pango\pango.aliases"   DiskId="1" Vital="yes"/>
 	                    </Component>
+    		        </Directory>
+		    </Directory>
+		    
+		    <Directory Id="dhFirefoxDir" Name="firefox">
+		        <Component Id="firefox" Guid="A7AF014C-E1FC-49AA-951E-F93C2EF7B078">
+		            <File Id="chromeManifest" Name="chrome.man"  LongName="chrome.manifest" src="firefox\chrome.manifest" DiskId="1" Vital="yes"/>
+		            <File Id="installRdf"     Name="install.rdf" LongName="install.rdf"     src="firefox\install.rdf"     DiskId="1" Vital="yes"/>
+                            <Registry Root="HKMU" Key="SOFTWARE\Mozilla\Firefox\Extensions">
+                                <Registry Name="firefox@mugshot.org" Value="[$firefox]" Type="string"/>
+                            </Registry>
+		        </Component>
+		    
+    		        <Directory Id="dhFirefoxChromeDir" Name="chrome">
+        		    <Directory Id="dhFirefoxChromeContentDir" Name="content">
+    		                <Component Id="firefoxChromeContent" Guid="8CE1540B-F3B7-423E-A36E-1B0E87272A90">
+	                            <File Id="overlayJs"  Name="overlay.js"    LongName="overlay.js"      src="firefox\chrome\content\overlay.js"   DiskId="1" Vital="yes"/>
+	                            <File Id="overlayXul" Name="overlay.xul"   LongName="overlay.xul"     src="firefox\chrome\content\overlay.xul"  DiskId="1" Vital="yes"/>
+	                        </Component>
+        		    </Directory>
+        		    <Directory Id="dhFirefoxChromeLocaleDir" Name="locale">
+            		        <Directory Id="dhFirefoxChromeLocaleEnUsDir" Name="en-US">
+        		            <Component Id="firefoxChromeLocaleEnUs" Guid="807F8BF0-03B6-49FC-87A4-B81504DEFFE9">
+            	                        <File Id="overlayDtd" Name="overlay.dtd"   LongName="overlay.dtd"     src="firefox\chrome\locale\en-US\overlay.dtd"  DiskId="1" Vital="yes"/>
+	                            </Component>
+            		        </Directory>
+        		    </Directory>
+        		    <Directory Id="dhFirefoxChromeSkinDir" Name="skin">
+        		        <Component Id="firefoxChromeSkin" Guid="9A55EE27-54C8-44A1-96F3-210AE940C39E">
+            	                    <File Id="linkswarm1616Png" Name="linkswar.png"   LongName="linkswarm16x16.png"     src="firefox\chrome\skin\linkswarm16x16.png"  DiskId="1" Vital="yes"/>
+            	                    <File Id="linkswarm2424Png" Name="linkswar.png"   LongName="linkswarm24x24.png"     src="firefox\chrome\skin\linkswarm24x24.png"  DiskId="1" Vital="yes"/>
+            	                    <File Id="mugshot3232Png"   Name="mugshot3.png"   LongName="mugshot32x32.png"       src="firefox\chrome\skin\mugshot32x32.png"    DiskId="1" Vital="yes"/>
+            	                    <File Id="toolbarCss"       Name="toolbar.css"    LongName="toolbar.css"            src="firefox\chrome\skin\toolbar.css"         DiskId="1" Vital="yes"/>
+	                        </Component>
+        		    </Directory>
+    		        </Directory>
+    		        <Directory Id="dhFirefoxComponentsDir" Name="componen" LongName="components">
+        		    <Component Id="firefoxComponents" Guid="A95ABC1F-5860-4A11-A915-367F25AD1FB2">
+            	                <File Id="hippoFirefoxStubDll"       Name="HippoFir.dll"   LongName="HippoFirefoxStub.dll"      src="firefox\components\HippoFirefoxStub.dll"      DiskId="1" Vital="yes"/>
+            	                <File Id="hippoIControlXpt"          Name="hippoICo.xpt"   LongName="HippoIControl.xpt"         src="firefox\components\HippoIControl.xpt"         DiskId="1" Vital="yes"/>
+            	                <File Id="hippoIControlListenerXpt"  Name="hippoICo.xpt"   LongName="HippoIControlListener.xpt" src="firefox\components\HippoIControlListener.xpt" DiskId="1" Vital="yes"/>
+            	                <File Id="hippoIExtensionXpt"        Name="hippoIEx.xpt"   LongName="HippoIExtension.xpt"       src="firefox\components\HippoIExtension.xpt"       DiskId="1" Vital="yes"/>
+        		    </Component>
+    		        </Directory>
+    		        <Directory Id="dhFirefoxDefaultsDir" Name="defaults">
+            		    <Directory Id="dhFirefoxDefaultsPreferencesDir" Name="preferen" LongName="preferences">
+        		        <Component Id="firefoxDefaultsPreferences" Guid="6BFD88AC-CCA9-4D82-B329-EAA2DFD759A2">
+	                            <File Id="prefsJs"  Name="prefs.js"    LongName="prefs.js"      src="firefox\defaults\preferences\prefs.js"   DiskId="1" Vital="yes"/>
+                                </Component>	                            
+            		    </Directory>
     		        </Directory>
 		    </Directory>
 	        </Directory>
