--- a/dumbhippo/trunk/server/web/css3/account.css
+++ b/dumbhippo/trunk/server/web/css3/account.css
@@ -43,6 +43,20 @@
 	font-size:	  		14px;
 }
 
-.dh-love-hate {
+#dhAccountInfoForm .dh-love-hate {
 	font-size:		inherit;
+}
+
+#dhAccountInfoForm .dh-love-hate-editing-label-box {
+	border-left:		1px solid #CCCC99;
+	border-top:			1px solid #CCCC99;	
+	border-bottom:		1px solid #CCCC99;	
+	background-color:	#FAFADC;
+}
+
+#dhAccountInfoForm .dh-love-hate-editing-content-box {
+	border-right:		1px solid #CCCC99;
+	border-top:			1px solid #CCCC99;	
+	border-bottom:		1px solid #CCCC99;	
+	background-color:	#FAFADC;
 }
