--- a/dumbhippo/trunk/server/web/css3/account.css
+++ b/dumbhippo/trunk/server/web/css3/account.css
@@ -48,15 +48,36 @@
 }
 
 #dhAccountInfoForm .dh-love-hate-editing-label-box {
-	border-left:		1px solid #CCCC99;
-	border-top:			1px solid #CCCC99;	
-	border-bottom:		1px solid #CCCC99;	
+	border-left-style:	solid;
+	border-top-style:	solid;
+	border-bottom-style: solid;
+	border-right-style: none;
+	border-width:		1px;	
 	background-color:	#FAFADC;
 }
 
 #dhAccountInfoForm .dh-love-hate-editing-content-box {
-	border-right:		1px solid #CCCC99;
-	border-top:			1px solid #CCCC99;	
-	border-bottom:		1px solid #CCCC99;	
+	border-right-style:	solid;
+	border-top-style:	solid;
+	border-bottom-style: solid;
+	border-left-style:	none;
+	border-width:		1px;	
 	background-color:	#FAFADC;
+}
+
+#dhAccountInfoForm .dh-love-hate-editing-box-success {
+	border-color:		#CCCC99;
+}
+
+#dhAccountInfoForm .dh-love-hate-editing-box-error {
+	border-color:		#CC0000;
+}
+
+#dhAccountInfoForm .dh-love-hate-error-prefix {
+	color:				red;
+	font-weight:		bold;
+}
+
+#dhAccountInfoForm .dh-love-hate-error-text {
+	font-weight:		bold;
 }
