Display both invitations that are valid and invitations that were expired on /network-overview
Provide controls to re-send an invitation or send a new one and to remove 
a contact and cancel their invitation.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -675,10 +675,15 @@ div.dh-person-header {
     clear:              right;
     display:            inline;
     margin-top:         -2px;
+    text-align:			left;	
 }
 
 .dh-person-item-more-info .dh-favicons { 
 	width:              200px;
+}
+
+.dh-invitation-date {
+    margin-left:        1px;
 }
 
 .dh-photo {
