Account.java:   - Adds a 'needsDownload' field to track whether the user has   ever logged in or has dismissed the download message from the web.   - Add "hasAcceptedTerms" to the definition of "active" MessengerGlueBean: Update needsDownload on first login HttpMethods HttpMethodsBean: add doSetNeedsDownload()
MessageSenderBean: Send group invitees to / not /download.

DisabledSigninBean SigninBean UserSigninBean HttpMethodsServlet2: Remove
  DisabledSigninBean
  make the disabled state much more like the normal one.
  
SigninBean AnonymousSigninBean UserSigninBean: add isActive() method

VerifyPage: Simplify redirects after signin to mostly just go to /account

RewriteServlet: Remove redirects to /we-miss-you and /download, only remaining
  global redirect is to /who-are-you.
  
we-miss-you.jsp: Bye-bye.

DownloadPage download.jsp download.js: Remove download.js, remove the
  special terms-acceptation from download.js.
  
signup.jsp summit.jsp: Remove unused references to dh.download.
  
account.jsp account.js dom.js: Disable account page contents when account isn't
  active. Add dh.dom.disableChildren() helper function.

accountStatus.tag site.css site-positions.css actions.js: Add a bar that can appear 
   at the top of a page when your account needs terms-of-use, or is disabled, 
   or you haven't downloaded yet.
  
network.jsp network-overview.jsp files.jsp groups.jsp: Add accountStatus.

person.jsp personStack.tag site.css: Add text when your Mugshot or stacker is empty.

personActionLinks.tag postBlock.tag groupStack.tag: Change signin.valid to signin.active 
   in some places.

randomTip.tag: Suppress when showing account status.

--- a/dumbhippo/trunk/server/web/css3/account.css
+++ b/dumbhippo/trunk/server/web/css3/account.css
@@ -47,6 +47,14 @@
 	font-size:		inherit;
 }
 
+.dh-account-contents-disabled * { 
+	color:				gray;
+}
+
+.dh-account-contents-disabled #dhAccounts .dh-info-cell { 
+	color:				gray;
+}
+
 #dhAccountInfoForm .dh-love-hate-editing-label-box {
 	border-left-style:	solid;
 	border-top-style:	solid;
