Move most of the outlined box functionality from the love-hate widget into formtable.js.
Clean up dh.util.foreachChildElements a bit.

Add ExpandableTextInput widget to formtable.  Use it for account username.

--- a/dumbhippo/trunk/server/web/css3/account-positions.css
+++ b/dumbhippo/trunk/server/web/css3/account-positions.css
@@ -12,13 +12,16 @@
 }
 
 .dh-form-table .dh-label-cell {
+	padding-right:	10px;
 	text-align:     right;
 	width:			170px;
 }
 
-#dhAccounts .dh-label-cell {
+.dh-form-table .dh-account-editing-content-only-box .dh-control-cell-div {
 	padding-left:	5px;
-	padding-right:	10px;
+}
+
+#dhAccounts .dh-label-cell {
 	text-align:     left;
 	width:          90px;
 }
@@ -200,17 +203,17 @@ tr.dh-email-address-spacer {
     bottom:        -4px;
 }
 
-#dhAccounts .dh-love-hate-instruction-editing {
+.dh-love-hate-instruction-editing {
 	padding-top:	5px;
 	padding-bottom:	5px;
 }
 
-#dhAccounts .dh-label-cell .dh-love-hate-editing {
+.dh-label-cell .dh-account-editing {
 	padding-top:	5px;
 	padding-bottom:	5px;
 }
 
-#dhAccounts .dh-control-cell .dh-love-hate-editing {
+.dh-control-cell .dh-account-editing {
 	padding-top:	5px;
 	padding-bottom:	5px;
 }
