--- a/dumbhippo/trunk/server/web/css3/account.css
+++ b/dumbhippo/trunk/server/web/css3/account.css
@@ -55,7 +55,7 @@
 	color:				gray;
 }
 
-#dhAccountInfoForm .dh-love-hate-editing-label-box {
+.dh-account-editing-label-box {
 	border-left-style:	solid;
 	border-top-style:	solid;
 	border-bottom-style: solid;
@@ -64,7 +64,7 @@
 	background-color:	#FAFADC;
 }
 
-#dhAccountInfoForm .dh-love-hate-editing-content-box {
+.dh-account-editing-content-box {
 	border-right-style:	solid;
 	border-top-style:	solid;
 	border-bottom-style: solid;
@@ -73,19 +73,33 @@
 	background-color:	#FAFADC;
 }
 
-#dhAccountInfoForm .dh-love-hate-editing-box-success {
+.dh-account-editing-content-only-box {
+	border-style:		solid;
+	border-width:		1px;
+	background-color:	#FAFADC;	
+}
+
+.dh-account-editing-box-success {
 	border-color:		#CCCC99;
 }
 
-#dhAccountInfoForm .dh-love-hate-editing-box-error {
+.dh-account-editing-box-error {
 	border-color:		#CC0000;
 }
 
-#dhAccountInfoForm .dh-love-hate-error-prefix {
+.dh-account-error-prefix {
 	color:				red;
 	font-weight:		bold;
 }
 
-#dhAccountInfoForm .dh-love-hate-error-text {
+.dh-account-error-text {
 	font-weight:		bold;
+}
+
+.dh-placebo-link {
+	color: blue;
+}
+
+.dh-saved-link {
+	color: black;
 }
