--- a/dumbhippo/trunk/server/web/css3/account.css
+++ b/dumbhippo/trunk/server/web/css3/account.css
@@ -1,29 +1,14 @@
 @CHARSET "UTF-8";
+@IMPORT url("styled-form.css");
 @IMPORT url("account-positions.css");
 @IMPORT url("photo-chooser.css");
 
-#dhAccountInfoForm, #dhAccounts {
-    font-size:  13px;
-}
-
-#dhAccountInfoForm, #dhAccounts .dh-address-table {
+#dhAccounts, #dhAccounts .dh-address-table {
 	font-size:	13px;
-}
-
-#dhAccountInfoForm .dh-base-row {
-    background: #EDEDED;
-}
-
-#dhAccountInfoForm .dh-alt-row {
-    background: #F3F3F3;
 }
 
 #dhAccounts .dh-base-row, #dhAccounts .dh-alt-row {
     background: inherit;
-}
-
-#dhAccountInfoForm .dh-label-cell {
-    font-weight: bold;
 }
 
 #dhAccounts .dh-label-cell {
@@ -32,15 +17,6 @@
 
 #dhAccounts .dh-info-cell {
 	color:			#9648BC;
-}
-
-.dh-section-header {
-	font-weight:  		bold;
-	font-size:	  		18px;
-}
-
-.dh-section-explanation {
-	font-size:	  		14px;
 }
 
 #dhAccountInfoForm .dh-love-hate {
