--- a/dumbhippo/trunk/server/web/css3/features-positions.css
+++ b/dumbhippo/trunk/server/web/css3/features-positions.css
@@ -15,3 +15,11 @@
 .dh-features-list-content-column {
 	padding-left:	5px;
 }
+
+.dh-features-list-tip-content {
+	width:			400px;
+}
+
+.dh-features-list-tip {
+	padding:		2px;
+}
