--- a/dumbhippo/trunk/server/web/css3/features.css
+++ b/dumbhippo/trunk/server/web/css3/features.css
@@ -16,3 +16,9 @@
 .dh-features-list-content {
 	font-size:			12px;
 }
+
+.dh-features-list-tip {
+	display: 			none;
+	border:				2px solid gray;
+	background-color:	white;
+}
