--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -627,6 +627,12 @@ div.dh-person-header {
 	margin-bottom:      5px;
 }
 
+.dh-tooltip {
+    position:			absolute;
+    display:            none;
+	z-index:			2;    
+}
+
 .dh-person-item {
     position:   relative;
     display:    block;
@@ -637,11 +643,8 @@ div.dh-person-header {
 }
 
 .dh-person-item-more-info {
-    position:			absolute;
-    display:            none;
     min-width:          270px;
     padding:            3px;         
-	z-index:			2;
 }
 
 .dh-person-item .dh-image {
