Custom-handle disabling links in the actionLink.tag
Add text for the case when someone doesn't have outstanding invitations.

--- a/dumbhippo/trunk/server/web/css3/invitation-positions.css
+++ b/dumbhippo/trunk/server/web/css3/invitation-positions.css
@@ -98,8 +98,7 @@
 }
 
 #dhInvitationSendButton {
-    position:       relative;
-    margin-bottom:  -10px;
+    margin-top:     0px;
 }
 
 // The following rule did not work for wrapping e-mail addresses that are
