--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -722,3 +722,9 @@ div.dh-person-header {
 	margin-top:     5px;
 	margin-bottom:	5px;
 }
+
+.dh-shinybox-bottom-content {
+    position:       relative;
+    margin-top:     5px;
+    margin-bottom:  -10px;
+}
