Add a confirmation step when removing contacts on /invitation or /network-overview

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -723,6 +723,11 @@ div.dh-person-header {
 	margin-bottom:	5px;
 }
 
+.dh-message a {
+    margin-right:   5px;
+    margin-left:    5px;
+}
+
 .dh-shinybox-bottom-content {
     position:       relative;
     margin-top:     5px;
