Style features to look sort of like links.

--- a/dumbhippo/trunk/server/web/css3/features.css
+++ b/dumbhippo/trunk/server/web/css3/features.css
@@ -17,6 +17,11 @@
 	font-size:			12px;
 }
 
+.dh-features-list-text {
+	color:				#666666;
+	text-decoration:	underline;
+}
+
 .dh-features-list-tip {
 	display: 			none;
 	border:				2px solid gray;
