Refactor personHeader into personHeaderLeft/personHeaderRight so content can be placed in two halves separately.
Update accountStatus to new styles.

Use 'My' instead of name for user's person page.

Update empty-stacker tips to use new style.

--- a/dumbhippo/trunk/server/web/css3/person.css
+++ b/dumbhippo/trunk/server/web/css3/person.css
@@ -15,7 +15,7 @@
 .dh-person-header-description {
 	font-size:		12px;
 	font-weight:	normal;
-	color:			#AE77CB;
+	color:			#E2671B;
 }
 
 .dh-person-header-bio {
