Update terms of use layout.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -711,6 +711,14 @@ div.dh-person-header-title {
 	margin-bottom:		15px;
 }
 
+.dh-account-status-secondary {
+	padding-left:		15px;
+}
+
+.dh-account-status-secondary input {
+	margin-left:		0px;
+}
+
 #dhDownloadMessageClose {
 	position:			absolute;
 	top:				2px;
