--- a/dumbhippo/trunk/server/web/css3/chatwindow-iefixes.css
+++ b/dumbhippo/trunk/server/web/css3/chatwindow-iefixes.css
@@ -2,4 +2,13 @@
 
 #dhChatMessages {
 	width: 100%;
+	padding-top: 6px;
+}
+
+.dh-chat-message-userfirst {
+	padding-top: 2px;
+}
+
+.dh-chat-message-contents {
+	margin-left: 17px;
 }
