--- a/dumbhippo/trunk/server/web/css/sharelink.css
+++ b/dumbhippo/trunk/server/web/css/sharelink.css
@@ -72,7 +72,6 @@ table, tr, td {
 
 #dhUrlTitleToShare {
   width: 100%;
-  font-family: "Arial";
   font-weight: bold;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -81,7 +80,6 @@ table, tr, td {
 }
 
 #dhShareSendTo {
-  font-family: "Arial";
   font-weight: bold;
   color: #666666;
 }
@@ -234,7 +232,6 @@ table, tr, td {
 }
 
 #dhShareDescriptionLabel {
-  font-family: "Arial";
   font-weight: bold;
   color: White;
   padding-top: 2px;
@@ -376,7 +373,7 @@ td.dhRecipientName {
 /* Autosuggest stuff */
 .dh-suggestion-list {
 	z-index:			2; /* on top */
-	font-family: 		Bitstream Vera Sans, sans;
+	font-family: 		Bitstream Vera Sans, sans-serif;
 	font-size:			10pt;
 	background: 		Window;
 	padding: 			2px;
