--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -3,7 +3,7 @@
 @IMPORT url("header.css");
 
 body {
-	font-family: 		Arial, sans-serif;
+	font-family: 		Luxi Sans, Arial, sans-serif;
 }
 
 body.dh-gray-background-page {
