Stack Netflix movie blocks that include movie images.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -335,6 +335,10 @@ div.dh-notification {
 	margin:	            5px;
 }
 
+.dh-stacker-block-beside-image .dh-stacker-block-icon {
+    margin:             0px;
+}
+
 .dh-stacker-block p	{
 	margin:				0px;
 	padding:			0px;
