--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -552,13 +552,13 @@ div.dh-async-action-link-complete {
     font-size:          11px;
 }
 
-.dh-music-block-left {
+.dh-stacker-block-with-image-left {
 	padding-top:		6px;
 	padding-left:		6px;
 	padding-bottom:		6px;
 }
 
-.dh-music-block-left table {
+.dh-stacker-block-with-image-left table {
 	table-layout:		fixed;
 }
 
@@ -566,8 +566,12 @@ div.dh-async-action-link-complete {
 	display:			block;
 }
 
-.dh-music-block-beside {
+.dh-stacker-block-with-image-beside {
 	padding-left:		8px;
+}
+
+.dh-stacker-block-with-image-beside .dh-stacker-block-icon {
+    margin:             0px;
 }
 
 .dh-music-block-artist {
